--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -3812,7 +3812,7 @@
     <string name="dock_audio_media_enabled" msgid="4039126523653131281">"Iba zvukové médiá"</string>
     <string name="emergency_tone_silent" msgid="5048069815418450902">"Ticho"</string>
     <string name="emergency_tone_alert" msgid="1977698889522966589">"Tóny"</string>
-    <string name="emergency_tone_vibrate" msgid="6282296789406984698">"Vibrovanie"</string>
+    <string name="emergency_tone_vibrate" msgid="6282296789406984698">"Vibrácie"</string>
     <string name="boot_sounds_title" msgid="5033062848948884111">"Zvuky pri spustení"</string>
     <string name="live_caption_title" msgid="8617086825712756983">"Živý prepis"</string>
     <string name="live_caption_summary" msgid="2898451867595161809">"Automatické titulkovanie médií"</string>
