--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -2514,15 +2514,15 @@
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Krajše"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Daljše"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Čas za samodejni klik"</string>
-    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Vibriranje in haptični odziv"</string>
+    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"Vibriranje in tipni odziv"</string>
     <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"Nastavitev moči vibriranja za različne uporabe"</string>
     <string name="accessibility_vibration_settings_state_on" msgid="5566026932372832502">"Vklopljeno"</string>
     <string name="accessibility_vibration_settings_state_off" msgid="7946588741954981703">"Izklopljeno"</string>
     <string name="accessibility_vibration_setting_disabled_for_silent_mode_summary" msgid="3982701772953323190">"Nastavitev je onemogočena, ker je naprava nastavljena na tiho."</string>
     <string name="accessibility_call_vibration_category_title" msgid="2545607568768192318">"Klici"</string>
     <string name="accessibility_notification_alarm_vibration_category_title" msgid="2683635252414849417">"Obvestila in alarmi"</string>
-    <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Interaktivni haptični odziv"</string>
-    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Uporabi vibriranje in haptični odziv"</string>
+    <string name="accessibility_interactive_haptics_category_title" msgid="3162855291184592021">"Interaktivni tipni odziv"</string>
+    <string name="accessibility_vibration_primary_switch_title" msgid="6162579254864450592">"Uporabi vibriranje in tipni odziv"</string>
     <string name="accessibility_alarm_vibration_title" msgid="4661294337828522745">"Vibriranje alarma"</string>
     <string name="accessibility_media_vibration_title" msgid="1372073715403945428">"Vibriranje predstavnosti"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Vibriranje pri zvonjenju"</string>
@@ -3710,7 +3710,7 @@
     <string name="keywords_network_reset" msgid="4075670452112218042">"ponastavitev, obnovitev, tovarniško"</string>
     <string name="keywords_factory_data_reset" msgid="4979623326958976773">"izbrisati, obnoviti, počistiti, odstraniti, tovarniška ponastavitev, ponastavitev na tovarniške nastavitve"</string>
     <string name="keywords_printing" msgid="3528250034669909466">"tiskalnik"</string>
-    <string name="keywords_sounds" msgid="187191900698371911">"pisk zvočnika, zvočnik, glasnost, utišati, tišina, zvok, glasba, haptično, vibriranje, vibrirati"</string>
+    <string name="keywords_sounds" msgid="187191900698371911">"pisk zvočnika, zvočnik, glasnost, utišati, tišina, zvok, glasba, haptično, tipno, vibriranje, vibrirati"</string>
     <string name="keywords_sounds_and_notifications_interruptions" msgid="1500312884808362467">"ne moti, prekinjaj, prekinitev, motnja"</string>
     <string name="keywords_app" msgid="7983814237980258061">"RAM"</string>
     <string name="keywords_location" msgid="8016374808099706213">"v bližini, lokacija, zgodovina, poročanje, GPS"</string>
@@ -3762,14 +3762,14 @@
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"plačilo, plačevanje, privzeto"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"dohodno obvestilo"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"povezava z internetom prek mobilnega telefona prek kabla USB, povezava z internetom prek mobilnega telefona prek povezave Bluetooth, dostopna točka wifi"</string>
-    <string name="keywords_accessibility_vibration_primary_switch" msgid="730692154347231253">"haptično, odziv na dotik, vibriranje, vibrirati"</string>
-    <string name="keywords_touch_vibration" msgid="1125291201902251273">"haptično, vibriranje, zaslon, občutljivost"</string>
-    <string name="keywords_ring_vibration" msgid="1736301626537417541">"haptično, vibriranje, telefon, klic, občutljivost, zvonjenje"</string>
-    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"haptično, vibriranje, telefon, klic, zvonjenje, postopno"</string>
-    <string name="keywords_notification_vibration" msgid="2620799301276142183">"haptično, vibriranje, občutljivost, obvestilo"</string>
-    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"haptično, vibriranje, občutljivost, alarm"</string>
+    <string name="keywords_accessibility_vibration_primary_switch" msgid="730692154347231253">"haptično, tipno, vibriranje, vibrirati"</string>
+    <string name="keywords_touch_vibration" msgid="1125291201902251273">"haptično, tipno, vibriranje, zaslon, občutljivost"</string>
+    <string name="keywords_ring_vibration" msgid="1736301626537417541">"haptično, tipno, vibriranje, telefon, klic, občutljivost, zvonjenje"</string>
+    <string name="keywords_ramping_ringer_vibration" msgid="3678966746742257366">"haptično, tipno, vibriranje, telefon, klic, zvonjenje, postopno"</string>
+    <string name="keywords_notification_vibration" msgid="2620799301276142183">"haptično, tipno, vibriranje, občutljivost, obvestilo"</string>
+    <string name="keywords_alarm_vibration" msgid="4833220371621521817">"haptično, tipno, vibriranje, občutljivost, alarm"</string>
     <string name="keywords_media_vibration" msgid="723896490102792327">"haptično, vibriranje, občutljivost, predstavnost"</string>
-    <string name="keywords_vibration" msgid="670455132028025952">"haptično, odziv na dotik, vibriranje, vibrirati"</string>
+    <string name="keywords_vibration" msgid="670455132028025952">"haptično, tipno, odziv na dotik, vibriranje, vibrirati"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"varčevanje z energijo baterije, lepljivo, trajno, varčevanje z energijo, baterija"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"rutina, vsakodnevni opravek, razpored, urnik, varčevanje z energijo baterije, varčevanje z energijo, baterija, samodejno, odstotek, delež"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, napredno klicanje, klicanje 4g"</string>
