--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -46,7 +46,7 @@
     <string name="sdcard_unmount" product="nosdcard" msgid="1816306320988638382">"卸載 USB 儲存裝置"</string>
     <string name="sdcard_unmount" product="default" msgid="8078570285871053815">"卸載 SD 卡"</string>
     <string name="sdcard_format" product="nosdcard" msgid="3248760426252305366">"清除 USB 儲存裝置資料"</string>
-    <string name="sdcard_format" product="default" msgid="3676635435136326182">"清除 SD 記憶卡資料"</string>
+    <string name="sdcard_format" product="default" msgid="3676635435136326182">"清除 SD 卡資料"</string>
     <string name="preview_pager_content_description" msgid="3762247188224576303">"預覽"</string>
     <string name="preview_page_indicator_content_description" msgid="2790254666634885865">"預覽第 <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> 頁 (共 <xliff:g id="NUM_PAGES">%2$d</xliff:g> 頁)"</string>
     <string name="font_size_summary" msgid="1296835853522566260">"縮小或放大畫面上的文字。"</string>
@@ -198,19 +198,19 @@
     <string name="sdcard_settings_screen_mass_storage_text" msgid="129059989000252994">"啟用 USB 大量儲存裝置"</string>
     <string name="sdcard_settings_total_bytes_label" msgid="5298511430610207103">"總容量 (位元組)："</string>
     <string name="sdcard_settings_not_present_status" product="nosdcard" msgid="6189761476582690998">"未掛接 USB 儲存裝置。"</string>
-    <string name="sdcard_settings_not_present_status" product="default" msgid="6601962586941623203">"沒有 SD 記憶卡。"</string>
+    <string name="sdcard_settings_not_present_status" product="default" msgid="6601962586941623203">"沒有 SD 卡。"</string>
     <string name="sdcard_settings_available_bytes_label" msgid="7721283102767669004">"可用空間 (位元組)："</string>
     <string name="sdcard_settings_mass_storage_status" product="nosdcard" msgid="4878190674458263222">"USB 儲存裝置目前作為大量儲存裝置使用。"</string>
-    <string name="sdcard_settings_mass_storage_status" product="default" msgid="8850227049504860012">"SD 記憶卡目前作為大量儲存裝置使用。"</string>
+    <string name="sdcard_settings_mass_storage_status" product="default" msgid="8850227049504860012">"SD 卡目前作為大量儲存裝置使用。"</string>
     <string name="sdcard_settings_unmounted_status" product="nosdcard" msgid="1053258530368541571">"現在可以安全移除 USB 儲存裝置了。"</string>
-    <string name="sdcard_settings_unmounted_status" product="default" msgid="5813940671700138561">"現在可以安全移除 SD 記憶卡了。"</string>
+    <string name="sdcard_settings_unmounted_status" product="default" msgid="5813940671700138561">"現在可以安全移除 SD 卡了。"</string>
     <string name="sdcard_settings_bad_removal_status" product="nosdcard" msgid="209564009449909311">"USB 儲存裝置在使用期間被移除！"</string>
     <string name="sdcard_settings_bad_removal_status" product="default" msgid="6817342973919819392">"SD 卡在使用期間被移除！"</string>
     <string name="sdcard_settings_used_bytes_label" msgid="5646588579332741943">"已用空間 (位元組)："</string>
     <string name="sdcard_settings_scanning_status" product="nosdcard" msgid="8037280964384235345">"正在掃瞄 USB 儲存裝置中的媒體..."</string>
     <string name="sdcard_settings_scanning_status" product="default" msgid="3297316465982471437">"正在掃瞄 SD 卡中的媒體..."</string>
     <string name="sdcard_settings_read_only_status" product="nosdcard" msgid="3444648373391629840">"USB 儲存裝置已掛接為唯讀裝置。"</string>
-    <string name="sdcard_settings_read_only_status" product="default" msgid="4338796260718910164">"SD 記憶卡已掛接為唯讀裝置。"</string>
+    <string name="sdcard_settings_read_only_status" product="default" msgid="4338796260718910164">"SD 卡已掛接為唯讀裝置。"</string>
     <string name="skip_label" msgid="6380034601349015895">"略過"</string>
     <string name="next_label" msgid="1248293387735652187">"下一步"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"語言"</string>
@@ -1580,7 +1580,7 @@
     <string name="sd_eject" product="nosdcard" msgid="6136102589751843304">"卸載共用儲存裝置"</string>
     <string name="sd_eject" product="default" msgid="8062832622096296251">"卸載 SD 卡"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="6859940774161708871">"卸載內部 USB 儲存裝置"</string>
-    <string name="sd_eject_summary" product="default" msgid="5151243312587186226">"請先卸載 SD 記憶卡，才能將其安全移除"</string>
+    <string name="sd_eject_summary" product="default" msgid="5151243312587186226">"請先卸載 SD 卡，才能將其安全移除"</string>
     <string name="sd_insert_summary" product="nosdcard" msgid="9164545135649775664">"插入用於掛接的 USB 儲存裝置"</string>
     <string name="sd_insert_summary" product="default" msgid="5949168259622002192">"插入用於掛接的 SD 卡"</string>
     <string name="sd_mount" product="nosdcard" msgid="8305985249945415150">"掛接 USB 儲存裝置"</string>
@@ -1588,20 +1588,20 @@
     <string name="sd_mount_summary" product="nosdcard" msgid="2190410240845521205"></string>
     <string name="sd_mount_summary" product="default" msgid="2190410240845521205"></string>
     <string name="sd_format" product="nosdcard" msgid="8657427883364711513">"清除 USB 儲存裝置資料"</string>
-    <string name="sd_format" product="default" msgid="9085302892248732329">"清除 SD 記憶卡資料"</string>
+    <string name="sd_format" product="default" msgid="9085302892248732329">"清除 SD 卡資料"</string>
     <string name="sd_format_summary" product="nosdcard" msgid="6179784504937189658">"清除內部 USB 儲存裝置中的所有資料，例如音樂和相片"</string>
-    <string name="sd_format_summary" product="default" msgid="60583152211068164">"清除 SD 記憶卡中的所有資料，例如音樂和相片"</string>
+    <string name="sd_format_summary" product="default" msgid="60583152211068164">"清除 SD 卡中的所有資料，例如音樂和相片"</string>
     <string name="mtp_ptp_mode_summary" msgid="7969656567437639239">"MTP 或 PTP 功能已啟用"</string>
     <string name="dlg_confirm_unmount_title" product="nosdcard" msgid="7694112411895701320">"卸載 USB 儲存裝置？"</string>
-    <string name="dlg_confirm_unmount_title" product="default" msgid="8251329019960361646">"您要卸載 SD 記憶卡嗎？"</string>
+    <string name="dlg_confirm_unmount_title" product="default" msgid="8251329019960361646">"您要卸載 SD 卡嗎？"</string>
     <string name="dlg_confirm_unmount_text" product="nosdcard" msgid="1212025106709645023">"如果您卸載 USB 儲存裝置，則某些正在使用的應用程式會停止運作，而且可能無法使用，直到重新掛接 USB 儲存裝置之後才會恢復正常。"</string>
-    <string name="dlg_confirm_unmount_text" product="default" msgid="3887768438615563697">"如果您卸載 SD 記憶卡，則某些正在使用中的應用程式會停止運作，而且可能無法使用，直到重新掛接 SD 記憶卡之後才會恢復正常。"</string>
+    <string name="dlg_confirm_unmount_text" product="default" msgid="3887768438615563697">"如果您卸載 SD 卡，則某些正在使用中的應用程式會停止運作，而且可能無法使用，直到重新掛接 SD 卡之後才會恢復正常。"</string>
     <string name="dlg_error_unmount_title" product="nosdcard" msgid="2205587942165199845"></string>
     <string name="dlg_error_unmount_title" product="default" msgid="2205587942165199845"></string>
     <string name="dlg_error_unmount_text" product="nosdcard" msgid="7876201891724279436">"無法卸載 USB 儲存裝置，請稍後再試。"</string>
-    <string name="dlg_error_unmount_text" product="default" msgid="2185659901137961711">"無法卸載 SD 記憶卡。請稍後再試。"</string>
+    <string name="dlg_error_unmount_text" product="default" msgid="2185659901137961711">"無法卸載 SD 卡。請稍後再試。"</string>
     <string name="unmount_inform_text" product="nosdcard" msgid="5932607205977999175">"即將卸載 USB 儲存裝置。"</string>
-    <string name="unmount_inform_text" product="default" msgid="716578785262713312">"即將卸載 SD 記憶卡。"</string>
+    <string name="unmount_inform_text" product="default" msgid="716578785262713312">"即將卸載 SD 卡。"</string>
     <string name="sd_ejecting_title" msgid="1641122369013595273">"卸載中"</string>
     <string name="sd_ejecting_summary" msgid="861928572729341132">"卸載中"</string>
     <string name="storage_low_title" msgid="8002650511493419567">"儲存空間即將用盡"</string>
@@ -1784,11 +1784,11 @@
     <string name="main_clear_desc_also_erases_esim" msgid="4553469876411831729"><li>"eSIM 卡"</li></string>
     <string name="main_clear_desc_no_cancel_mobile_plan" msgid="369883568059127035">\n\n"此操作不會取消您的流動服務計劃。"</string>
     <string name="main_clear_desc_erase_external_storage" product="nosdcard" msgid="4441604184663452046">\n\n"如要一併清除音樂、圖片及其他使用者資料，則需清除 "<b>"USB 儲存裝置"</b>"資料。"</string>
-    <string name="main_clear_desc_erase_external_storage" product="default" msgid="1498514970618215728">\n\n"如要一併清除音樂、圖片及其他使用者資料，則需清除 "<b>"SD 記憶卡"</b>"資料。"</string>
+    <string name="main_clear_desc_erase_external_storage" product="default" msgid="1498514970618215728">\n\n"如要一併清除音樂、圖片及其他使用者資料，則需清除 "<b>"SD 卡"</b>"資料。"</string>
     <string name="erase_external_storage" product="nosdcard" msgid="2182181846128639635">"清除 USB 儲存裝置資料"</string>
-    <string name="erase_external_storage" product="default" msgid="2610056855012660451">"清除 SD 記憶卡資料"</string>
+    <string name="erase_external_storage" product="default" msgid="2610056855012660451">"清除 SD 卡資料"</string>
     <string name="erase_external_storage_description" product="nosdcard" msgid="6358699244894944843">"清除內部 USB 儲存裝置中的所有資料，例如音樂或相片"</string>
-    <string name="erase_external_storage_description" product="default" msgid="3367779850546310380">"清除 SD 記憶卡中的所有資料，例如音樂或相片"</string>
+    <string name="erase_external_storage_description" product="default" msgid="3367779850546310380">"清除 SD 卡中的所有資料，例如音樂或相片"</string>
     <string name="main_clear_button_text" product="tablet" msgid="6246087475569640671">"清除所有資料"</string>
     <string name="main_clear_button_text" product="default" msgid="6246087475569640671">"清除所有資料"</string>
     <string name="main_clear_final_desc" msgid="5800877928569039580">"系統會刪除您所有的個人資料和已下載的應用程式。您無法復原這個動作。"</string>
@@ -3042,7 +3042,7 @@
     <string name="credentials_title" msgid="7535942196886123656">"憑證儲存空間"</string>
     <string name="credentials_install" msgid="3933218407598415827">"安裝憑證"</string>
     <string name="credentials_install_summary" product="nosdcard" msgid="6644116499934553975">"從儲存裝置安裝憑證"</string>
-    <string name="credentials_install_summary" product="default" msgid="8161351950524166012">"從 SD 記憶卡安裝憑證"</string>
+    <string name="credentials_install_summary" product="default" msgid="8161351950524166012">"從 SD 卡安裝憑證"</string>
     <string name="credentials_reset" msgid="4246628389366452655">"清除憑證"</string>
     <string name="credentials_reset_summary" msgid="5400585520572874255">"移除所有憑證"</string>
     <string name="trusted_credentials" msgid="2522784976058244683">"可信的憑證"</string>
